--- a/index.html
+++ b/index.html
@@ -40,35 +40,38 @@
     <div id="vanta"></div>
     <main class="animated">
       <header>
-        <img src="./images/takuya.jpg" />
-        <h1>@craftzdog</h1>
+        <img src="./img/eightbit-blake.png" />
+        <h1>@makerblaker</h1>
       </header>
       <ul>
         <li>
-          <a href="https://www.craftz.dog/">
-            <img src="./images/homepage.svg" alt="Homepage" width="20" />
+          <a href="https://www.blakemiller.ca/">
+            <img src="./img/homepage.svg" alt="Homepage" width="20" />
             Official Website
           </a>
         </li>
         <li>
           <a href="https://www.youtube.com/playlist?list=UU7yZ6keOGsvERMp2HaEbbXQ&index=1&playnext=1">
-            <img src="./images/youtube.svg" alt="YouTube" width="20" />
+            <img src="./img/youtube.svg" alt="YouTube" width="20" />
             YouTube
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/inkdrop_app">
-            <img src="./images/twitter.svg" alt="Twitter" width="20" />
+          <a href="https://twitter.com/makerblaker">
+            <img src="./img/twitter.svg" alt="Twitter" width="20" />
             Twitter
           </a>
         </li>
         <li>
-          <a href="https://github.com/craftzdog">
-            <img src="./images/github.svg" alt="GitHub" width="20" />
+          <a href="https://github.com/Makerblaker/">
+            <img src="./img/github.svg" alt="GitHub" width="20" />
             GitHub
           </a>
         </li>
       </ul>
     </main>
+    <footer>
+      Template by <a href="https://www.craftz.dog/" alt="craftzdog">craftzdog</a>
+    </footer>
   </body>
 </html>
