Added mouse over affect on logo.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Takuya Matsuyama - Links</title>
+    <title>Blake Miller - Links</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="preload" href="./images/bg01.jpg" as="image" />
@@ -40,7 +40,7 @@
     <div id="vanta"></div>
     <main class="animated">
       <header>
-        <img src="./img/eightbit-blake.png" />
+        <img src="./img/eightbit-blake.png" onmouseover="this.src='./img/blake.jpg'" onmouseout="this.src='./img/eightbit-blake.png'"/>
         <h1>@makerblaker</h1>
       </header>
       <ul>
@@ -48,6 +48,12 @@
           <a href="https://www.blakemiller.ca/">
             <img src="./img/homepage.svg" alt="Homepage" width="20" />
             Official Website
+          </a>
+        </li>
+        <li>
+          <a href="https://blog.blakemiller.ca/">
+            <img src="./img/wordpress.png" alt="Blog" width="20" />
+            Blog
           </a>
         </li>
         <li>
