Finished hover over image

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Blake Miller - Links</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="preload" href="./images/bg01.jpg" as="image" />
+    <link rel="preload" href="./img/blake.png" as="image" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
     <script>
@@ -40,7 +41,7 @@
     <div id="vanta"></div>
     <main class="animated">
       <header>
-        <img src="./img/eightbit-blake.png" onmouseover="this.src='./img/blake.jpg'" onmouseout="this.src='./img/eightbit-blake.png'"/>
+        <div class="me"></div>
         <h1>@makerblaker</h1>
       </header>
       <ul>
@@ -52,7 +53,7 @@
         </li>
         <li>
           <a href="https://blog.blakemiller.ca/">
-            <img src="./img/wordpress.png" alt="Blog" width="20" />
+            <img src="./img/wordpress.svg" alt="Blog" width="20" />
             Blog
           </a>
         </li>
@@ -69,15 +70,21 @@
           </a>
         </li>
         <li>
+          <a href="">
+            <img src="./img/linkedin.svg" alt="LinkedIn" width="20" />
+            linkedIn
+          </a>
+        </li>
+        <li>
           <a href="https://github.com/Makerblaker/">
             <img src="./img/github.svg" alt="GitHub" width="20" />
             GitHub
           </a>
         </li>
       </ul>
+      <footer>
+        Template by <a href="https://www.craftz.dog/" alt="craftzdog">craftzdog</a>
+      </footer>
     </main>
-    <footer>
-      Template by <a href="https://www.craftz.dog/" alt="craftzdog">craftzdog</a>
-    </footer>
   </body>
 </html>
