Fixed background sizing and location

--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
         el: "#vanta",
         mouseControls: true,
         touchControls: true,
-        gyroControls: true,
+        gyroControls: false,
         minHeight: 200.00,
         minWidth: 200.00,
         scale: 1.00,
         scaleMobile: 1.00,
+        color1: 0xc30202,
+        color2: 0xc5b686,
+        birdSize: 1.10,
         backgroundAlpha: 0.0,
-        color2: 0xff00f0,
-        wingSpan: 40.00,
-        separation: 100.00,
-        alignment: 77.00,
-        cohesion: 5.00,
-        quantity: 1.00
+        speedLimit: 9.00,
+        separation: 79.00,
+        alignment: 72.00,
+        cohesion: 22.00,
+        quantity: 3.00
       })
 
       setTimeout(() => {
