--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/playlist?list=UU7yZ6keOGsvERMp2HaEbbXQ&index=1&playnext=1">
+          <a href="https://www.youtube.com/channel/UCS_HJN104G-bwj4u3GHNi4Q">
             <img src="./img/youtube.svg" alt="YouTube" width="20" />
             YouTube
           </a>
@@ -72,7 +72,7 @@
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="https://www.linkedin.com/in/millerblake1">
             <img src="./img/linkedin.svg" alt="LinkedIn" width="20" />
             linkedIn
           </a>
