--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     })
     </script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9X3TC5EWL9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9X3TC5EWL9');
+  </script>
   <body>
     <div id="vanta"></div>
     <main class="animated">
