--- a/index.html
+++ b/index.html
@@ -1,101 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Blake Miller - Links</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./index.css" />
-    <link rel="preload" href="./images/bg.jpg" as="image" />
-    <link rel="preload" href="./img/blake.png" as="image" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
-    <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      VANTA.BIRDS({
-        el: "#vanta",
-        mouseControls: true,
-        touchControls: true,
-        gyroControls: false,
-        minHeight: 200.00,
-        minWidth: 200.00,
-        scale: 1.00,
-        scaleMobile: 1.00,
-        color1: 0xc30202,
-        color2: 0xc5b686,
-        birdSize: 1.10,
-        backgroundAlpha: 0.0,
-        speedLimit: 9.00,
-        separation: 79.00,
-        alignment: 72.00,
-        cohesion: 22.00,
-        quantity: 3.00
-      })
+    <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-9X3TC5EWL9"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
 
-      setTimeout(() => {
-        const main = document.querySelector('main')
-        main.style.opacity = 1
-        main.style.filter = 'blur(0px)'
-      }, 1000)
-    })
-    </script>
-  </head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9X3TC5EWL9"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+            gtag('config', 'G-9X3TC5EWL9');
+        </script>
+        <meta charset="utf-8"/>
+        <title>Blake Miller - Links</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="./index.css"/>
+        <link rel="preload" href="./images/bg.jpg" as="image"/>
+        <link rel="preload" href="./img/blake.png" as="image"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+        <script>
+            window.addEventListener('DOMContentLoaded', () => {
+                VANTA.BIRDS({
+                    el: "#vanta",
+                    mouseControls: true,
+                    touchControls: true,
+                    gyroControls: false,
+                    minHeight: 200.00,
+                    minWidth: 200.00,
+                    scale: 1.00,
+                    scaleMobile: 1.00,
+                    color1: 0xc30202,
+                    color2: 0xc5b686,
+                    birdSize: 1.10,
+                    backgroundAlpha: 0.0,
+                    speedLimit: 9.00,
+                    separation: 79.00,
+                    alignment: 72.00,
+                    cohesion: 22.00,
+                    quantity: 3.00
+                })
 
-    gtag('config', 'G-9X3TC5EWL9');
-  </script>
-  <body>
-    <div id="vanta"></div>
-    <main class="animated">
-      <header>
-        <div class="me"></div>
-        <h1>@makerblaker</h1>
-      </header>
-      <ul>
-        <li>
-          <a href="https://www.blakemiller.ca/">
-            <img src="./img/homepage.svg" alt="Homepage" width="20" />
-            Official Website
-          </a>
-        </li>
-        <li>
-          <a href="https://blog.blakemiller.ca/">
-            <img src="./img/wordpress.svg" alt="Blog" width="20" />
-            Blog
-          </a>
-        </li>
-        <li>
-          <a href="https://www.youtube.com/channel/UCS_HJN104G-bwj4u3GHNi4Q">
-            <img src="./img/youtube.svg" alt="YouTube" width="20" />
-            YouTube
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/makerblaker">
-            <img src="./img/twitter.svg" alt="Twitter" width="20" />
-            Twitter
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/millerblake1">
-            <img src="./img/linkedin.svg" alt="LinkedIn" width="20" />
-            linkedIn
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/Makerblaker/">
-            <img src="./img/github.svg" alt="GitHub" width="20" />
-            GitHub
-          </a>
-        </li>
-      </ul>
-      <footer>
-        Template by <a href="https://www.craftz.dog/" alt="craftzdog">craftzdog</a>
-      </footer>
-    </main>
-  </body>
+                setTimeout(() => {
+                    const main = document.querySelector('main')
+                    main.style.opacity = 1
+                    main.style.filter = 'blur(0px)'
+                }, 1000)
+            })
+        </script>
+    </head>
+    <body>
+        <div id="vanta"></div>
+        <main class="animated">
+            <header>
+                <div class="me"></div>
+                <h1>@makerblaker</h1>
+            </header>
+            <ul>
+                <li>
+                    <a href="https://www.blakemiller.ca/">
+                        <img src="./img/homepage.svg" alt="Homepage" width="20"/>
+                        Official Website
+                    </a>
+                </li>
+                <li>
+                    <a href="https://blog.blakemiller.ca/">
+                        <img src="./img/wordpress.svg" alt="Blog" width="20"/>
+                        Blog
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCS_HJN104G-bwj4u3GHNi4Q">
+                        <img src="./img/youtube.svg" alt="YouTube" width="20"/>
+                        YouTube
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/makerblaker">
+                        <img src="./img/twitter.svg" alt="Twitter" width="20"/>
+                        Twitter
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/millerblake1">
+                        <img src="./img/linkedin.svg" alt="LinkedIn" width="20"/>
+                        linkedIn
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/Makerblaker/">
+                        <img src="./img/github.svg" alt="GitHub" width="20"/>
+                        GitHub
+                    </a>
+                </li>
+            </ul>
+            <footer>
+                Template by
+                <a href="https://www.craftz.dog/" alt="craftzdog">craftzdog</a>
+            </footer>
+        </main>
+    </body>
 </html>
