--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UCS_HJN104G-bwj4u3GHNi4Q">
+                    <a href="https://www.youtube.com/@MakerBlaker">
                         <img src="./img/youtube.svg" alt="YouTube" width="20"/>
                         YouTube
                     </a>
