--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <title>Blake Miller - Links</title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="./index.css"/>
-        <link rel="preload" href="./img/bg.jpg" as="image"/>
+        <link rel="preload" href="./img/background.jpg" as="image"/>
         <link rel="preload" href="./img/blake.png" as="image"/>
+        <!--
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
         <script>
@@ -49,6 +50,7 @@
                 }, 1000)
             })
         </script>
+        -->
     </head>
     <body>
         <div id="vanta"></div>
