More bird removal.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         -->
     </head>
     <body>
-        <div id="vanta"></div>
+        <!--<div id="vanta"></div>-->
         <main class="animated">
             <header>
                 <div class="me"></div>
