--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         <link rel="preload" href="./img/background.jpg" as="image"/>
         <link rel="preload" href="./img/blake.png" as="image"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-        <!--
-        <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+        <!-- 
+            <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+        -->
         <script>
-            window.addEventListener('DOMContentLoaded', () => {
+            window.addEventListener('DOMContentLoaded', () => {/*
                 VANTA.BIRDS({
                     el: "#vanta",
                     mouseControls: true,
@@ -42,7 +43,7 @@
                     cohesion: 22.00,
                     quantity: 3.00
                 })
-
+*/
                 setTimeout(() => {
                     const main = document.querySelector('main')
                     main.style.opacity = 1
@@ -50,10 +51,10 @@
                 }, 1000)
             })
         </script>
-        -->
+        
     </head>
     <body>
-        <!--<div id="vanta"></div>-->
+        <div id="vanta"></div>
         <main class="animated">
             <header>
                 <div class="me"></div>
