--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <title>Blake Miller - Links</title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="./index.css"/>
+        <link rel="icon" type="image/png" href="./img/cropped-BM.png" />
         <link rel="preload" href="./img/background.jpg" as="image"/>
         <link rel="preload" href="./img/blake.png" as="image"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
