Added Discord server.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://discord.gg/XngPdvqjaE">
+                        <img src="./img/discord.svg" alt="Discord" width="20"/>
+                        Discord
+                    </a>
+                </li>
+                
+                <li>
                     <a href="https://www.youtube.com/@MakerBlaker">
                         <img src="./img/youtube.svg" alt="YouTube" width="20"/>
                         YouTube
