updated discord name.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <li>
                     <a href="https://discord.gg/XngPdvqjaE">
                         <img src="./img/discord.svg" alt="Discord" width="20"/>
-                        Discord
+                        The Crawl Space
                     </a>
                 </li>
                 
